# ComfyUI-PromptGenerator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  ROADMAP.md  __init__.py  code-review-comfyui-prompt-generator.md  pyproject.toml  pytest.ini  requirements.txt  style_presets.py
.github/workflows/: publish.yml  test.yml
agents/: comfyui-node-developer.md
config/: Modelfile.dualstream  Modelfile.limbicnation  styles.yaml  templates.yaml
custom_nodes/comfyui-prompt-generator/: __init__.py
custom_nodes/comfyui-prompt-generator/nodes/: negative_prompt_node.py  prompt_combiner_node.py  prompt_refiner_node.py  style_applier_node.py
docs/: PR-8-REVIEW.md  ROADMAP.md
docs/plans/: 2026-06-10-qwen2-5-dual-stream-refiner.md
nodes/: negative_prompt_node.py  prompt_combiner_node.py  prompt_dual_stream_refiner_node.py  prompt_generator_node.py  prompt_refiner_node.py  style_applier_node.py
nodes/adapters/: ollama_client.py
scripts/: check_version_tag.py
social/: 2026-02-16_SOCIAL_v1.1.6-bugfix-posts.md
tests/unit/: test_extract_final_prompt.py  test_node_registration.py  test_ollama_client.py  test_prompt_combiner.py  test_prompt_dual_stream_refiner.py  test_prompt_refiner.py  test_style_presets.py
