[project]
name = "comfyui-prompt-generator"
description = "Generate Stable Diffusion prompts using Qwen3-8B via Ollama with 9 style presets"
version = "1.3.1"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Limbicnation/ComfyUI-PromptGenerator"
Repository = "https://github.com/Limbicnation/ComfyUI-PromptGenerator.git"
Issues = "https://github.com/Limbicnation/ComfyUI-PromptGenerator/issues"

[tool.comfy]
PublisherId = "limbicnation"
DisplayName = "Prompt Generator"
Icon = "https://raw.githubusercontent.com/Limbicnation/ComfyUI-PromptGenerator/main/icon.png"

[tool.comfy.python]
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "UP",            # pyupgrade — drives PEP 585 / 604 rewrites
  "B",             # flake8-bugbear
  "SIM",           # flake8-simplify
  "RUF",           # ruff-specific
]
